--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
 		"build:modelviewer": "npm run build -- -M",
 		"build:strviewer": "npm run build -- -S",
 		"build:effectviewer": "npm run build -- -E",
+		"build:uiviewer": "npm run build -- -U",
 		"build:threadhandler": "npm run build -- -T",
 		"build:html": "npm run build -- -H",
 		"build:ai": "npm run build -- -A",
